# partial-functional

./: Cargo.toml  README.md
examples/: max_profit.rs  min_stack.rs  orderline.rs
monoid_derive/: Cargo.toml  Readme.md
src/: functor.rs  hkt.rs  lib.rs  semigroup.rs
src/monoid/: all.rs  any.rs  first.rs  last.rs  max.rs  min.rs  mod.rs  product.rs  sum.rs
