[package]
name = "partial-functional"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small collection of Semigroups and Monoids for rust"
repository = "https://github.com/wgaffa/partial-functional"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partfun_derive = { version = "0.1.0", path = "monoid_derive" }
num-traits = "0.2.15"

[dev-dependencies]
paste = "1.0.7"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "2.1.0"
